fix: Correct icon alignment

--- a/src/style/components/list/participant-item.less
+++ b/src/style/components/list/participant-item.less
@@ -106,6 +106,9 @@ participant-item {
         .availability-state-label {
           .ellipsis;
         }
+        .availability-state-icon {
+          display: flex;
+        }
       }
 
       .participant-item-content-name {
