--- a/src/style/components/participant-avatar.less
+++ b/src/style/components/participant-avatar.less
@@ -117,10 +117,16 @@ participant-avatar {
 
   &.avatar-xl {
     .avatar-size(xl);
+    .avatar-service-placeholder service-icon svg {
+      width: 100%;
+    }
   }
 
   &.avatar-l {
     .avatar-size(l);
+    .avatar-service-placeholder service-icon svg {
+      width: 100%;
+    }
   }
 
   &.avatar-m {
